test/libyul/yulSyntaxTests/dot_leading_variabledeclaration.yul
{
    let .a := 1
}
// ----
// ParserError 2314: (10-11): Expected identifier but got '.'
